--- a/client/src/modules/components/Table/Table.scss
+++ b/client/src/modules/components/Table/Table.scss
@@ -27,7 +27,6 @@
     overflow: hidden;
     flex-direction: column;
     flex: 1;
-    position: inherit;
     padding-top: 0;
   }
 
